<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyNote</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="dont_have_account">Don\'t have an account? Register here</string>
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="name_hint">Name</string>
    <string name="category_hint">Category</string>
    <string name="amount_hint">Amount (Rp)</string>
    <string name="date_hint">Date</string>
    <string name="save_note_button">Save Note</string>
    <string name="notes_list_title">Your Transactions</string>
    <string name="profile_title">User Profile</string>
    <string name="total_expense">Total Expense:</string>
    <string name="logout_button">Logout</string>
    <string name="add_note">Add Note</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>